module.exports = {
  demo: require('./int/demo/demo.js'),
  hwscGrpcSampleSvc: require('./int/hwsc-grpc-sample-svc/hwsc-grpc-sample-svc.js'),
  hwscFileMetadataSvc: require('./int/hwsc-file-metadata-svc/hwsc-file-metadata-svc.js'),
  hwscDocumentSvc: require('./int/hwsc-document-svc/hwsc-document-svc.js'),
  hwscFileTransactionSvc: require('./int/hwsc-file-transaction-svc/hwsc-file-transaction-svc.js'),
  hwscAppGatewaySvc: require('./int/hwsc-app-gateway-svc/hwsc-app-gateway-svc.js'),
  hwscUserSvc: require('./int/hwsc-user-svc/hwsc-user-svc.js'),
};
